--- a/vignettes/tests_and_coverage.Rmd
+++ b/vignettes/tests_and_coverage.Rmd
@@ -30,12 +30,16 @@ Coverage summary is created using the
 
 | Object                                                | Coverage (%) |
 |:------------------------------------------------------|:------------:|
-| susy3dapp                                             |     9.39     |
-| [R/golem\_utils\_server.R](https://github.com/zeta-r/susy3dapp/blob/develop/R/golem_utils_server.R) |     0.00     |
-| [R/golem\_utils\_ui.R](https://github.com/zeta-r/susy3dapp/blob/develop/R/golem_utils_ui.R)         |     0.00     |
-| [R/run\_app.R](https://github.com/zeta-r/susy3dapp/blob/develop/R/run_app.R)                        |     0.00     |
-| [R/app\_config.R](https://github.com/zeta-r/susy3dapp/blob/develop/R/app_config.R)                  |    14.29     |
-| [R/app\_ui.R](https://github.com/zeta-r/susy3dapp/blob/develop/R/app_ui.R)                          |    100.00    |
+| susy3dapp                                             |    15.45     |
+| [R/app\_server.R](https://github.com/zeta-r/susy3dapp/blob/obj_inspection/R/app_server.R)                  |     0.00     |
+| [R/golem\_utils\_server.R](https://github.com/zeta-r/susy3dapp/blob/obj_inspection/R/golem_utils_server.R) |     0.00     |
+| [R/run\_app.R](https://github.com/zeta-r/susy3dapp/blob/obj_inspection/R/run_app.R)                        |     0.00     |
+| [R/golem\_utils\_ui.R](https://github.com/zeta-r/susy3dapp/blob/obj_inspection/R/golem_utils_ui.R)         |     1.42     |
+| [R/app\_config.R](https://github.com/zeta-r/susy3dapp/blob/obj_inspection/R/app_config.R)                  |    14.29     |
+| [R/mod\_obj\_inspection.R](https://github.com/zeta-r/susy3dapp/blob/obj_inspection/R/mod_obj_inspection.R) |    29.17     |
+| [R/app\_ui.R](https://github.com/zeta-r/susy3dapp/blob/obj_inspection/R/app_ui.R)                          |    100.00    |
+| [R/fct\_fetc\_ssr.R](https://github.com/zeta-r/susy3dapp/blob/obj_inspection/R/fct_fetc_ssr.R)             |    100.00    |
+| [R/fct\_fetch\_obj.R](https://github.com/zeta-r/susy3dapp/blob/obj_inspection/R/fct_fetch_obj.R)           |    100.00    |
 
 <br>
 
@@ -46,18 +50,24 @@ Unit Test summary is created using the
 
 | file                                                          |   n |  time | error | failed | skipped | warning | icon |
 |:--------------------------------------------------------------|----:|------:|------:|-------:|--------:|--------:|:-----|
-| [test-golem-recommended.R](https://github.com/zeta-r/susy3dapp/blob/develop/tests/testthat/test-golem-recommended.R) |   7 | 0.041 |     0 |      0 |       1 |       0 | 🔶    |
+| [test-fetc\_ssr.R](https://github.com/zeta-r/susy3dapp/blob/obj_inspection/tests/testthat/test-fetc_ssr.R)                  |   2 | 0.083 |     0 |      0 |       0 |       0 |      |
+| [test-fetch\_obj.R](https://github.com/zeta-r/susy3dapp/blob/obj_inspection/tests/testthat/test-fetch_obj.R)                |   2 | 0.004 |     0 |      0 |       0 |       0 |      |
+| [test-fetch\_ssr.R](https://github.com/zeta-r/susy3dapp/blob/obj_inspection/tests/testthat/test-fetch_ssr.R)                |   1 | 0.017 |     0 |      0 |       0 |       0 |      |
+| [test-golem-recommended.R](https://github.com/zeta-r/susy3dapp/blob/obj_inspection/tests/testthat/test-golem-recommended.R) |   7 | 0.031 |     0 |      0 |       1 |       0 | 🔶    |
 
 <details open>
 <summary>
 Show Detailed Test Results
 </summary>
 
-| file                                                              | context           | test         | status  |   n |  time | icon |
-|:------------------------------------------------------------------|:------------------|:-------------|:--------|----:|------:|:-----|
-| [test-golem-recommended.R](https://github.com/zeta-r/susy3dapp/blob/develop/tests/testthat/test-golem-recommended.R#L3)  | golem-recommended | app ui       | PASS    |   2 | 0.013 |      |
-| [test-golem-recommended.R](https://github.com/zeta-r/susy3dapp/blob/develop/tests/testthat/test-golem-recommended.R#L13) | golem-recommended | app server   | PASS    |   4 | 0.026 |      |
-| [test-golem-recommended.R](https://github.com/zeta-r/susy3dapp/blob/develop/tests/testthat/test-golem-recommended.R#L63) | golem-recommended | app launches | SKIPPED |   1 | 0.002 | 🔶    |
+| file                                                              | context           | test                 | status  |   n |  time | icon |
+|:------------------------------------------------------------------|:------------------|:---------------------|:--------|----:|------:|:-----|
+| [test-fetc\_ssr.R](https://github.com/zeta-r/susy3dapp/blob/obj_inspection/tests/testthat/test-fetc_ssr.R#L2)                   | fetc\_ssr         | fatch\_ssr works     | PASS    |   2 | 0.083 |      |
+| [test-fetch\_obj.R](https://github.com/zeta-r/susy3dapp/blob/obj_inspection/tests/testthat/test-fetch_obj.R#L2)                 | fetch\_obj        | fetch\_obj works     | PASS    |   2 | 0.004 |      |
+| [test-fetch\_ssr.R](https://github.com/zeta-r/susy3dapp/blob/obj_inspection/tests/testthat/test-fetch_ssr.R#L2)                 | fetch\_ssr        | multiplication works | PASS    |   1 | 0.017 |      |
+| [test-golem-recommended.R](https://github.com/zeta-r/susy3dapp/blob/obj_inspection/tests/testthat/test-golem-recommended.R#L3)  | golem-recommended | app ui               | PASS    |   2 | 0.018 |      |
+| [test-golem-recommended.R](https://github.com/zeta-r/susy3dapp/blob/obj_inspection/tests/testthat/test-golem-recommended.R#L13) | golem-recommended | app server           | PASS    |   4 | 0.012 |      |
+| [test-golem-recommended.R](https://github.com/zeta-r/susy3dapp/blob/obj_inspection/tests/testthat/test-golem-recommended.R#L63) | golem-recommended | app launches         | SKIPPED |   1 | 0.001 | 🔶    |
 
 | Failed | Warning | Skipped |
 |:-------|:--------|:--------|
@@ -75,7 +85,7 @@ Session Info
 | Platform | x86\_64-pc-linux-gnu (64-bit) |
 | Running  | Debian GNU/Linux bullseye/sid |
 | Language | en\_US                        |
-| Timezone | Eurohttps://github.com/zeta-r/susy3dapp/blob/develop/Rome                   |
+| Timezone | Eurohttps://github.com/zeta-r/susy3dapp/blob/obj_inspection/Rome                   |
 
 | Package  | Version |
 |:---------|:--------|
